# Vigitia-ROS2

./: .clang-format  .gitignore  Readme.md
Azure_Kinect_ROS_Driver-foxy-devel/: README.md
calibration/: CMakeLists.txt  package.xml
calibration/include/calibration/: visibility_control.h
calibration/src/: projector_calibration.cpp
calibration_interfaces/: CMakeLists.txt  package.xml
calibration_interfaces/action/: Calibrate.action
degginger_draw/: CMakeLists.txt  package.xml
degginger_draw/include/degginger_draw/: bezier.h  frame.h
degginger_draw/src/: bezier.cpp  frame.cpp  main.cpp
example_files/: extrinsics.xml  intrinsics.xml
launch/: calibration.launch.py  touch.launch.py
projector_display/: package.xml  setup.cfg  setup.py
projector_display/projector_display/: display.py
static_pose_injector/: package.xml  setup.cfg  setup.py
static_pose_injector/example_files/: extrinsics.xml  intrinsics.xml
static_pose_injector/static_pose_injector/: broadcaster.py  camerainfo_projector.py
touch_interfaces/: CMakeLists.txt  package.xml
touch_interfaces/msg/: TouchEvent.msg  TouchEvents.msg
touch_tracker/: CMakeLists.txt  package.xml
touch_tracker/include/: Direct.h  FixedQueue.h  Settings.h  ThreadedDynamicBackground.h  ThreadedTouchTracker.h
touch_tracker/src/: Direct.cpp  ThreadedDynamicBackground.cpp  ThreadedTouchTracker.cpp  tracker.cpp
