<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projector_display</name>
  <version>0.1.0</version>
  <description>Simple Fullscreen Image Window</description>
  <maintainer email="chris.brammer@extend3d.de">Chris Brammer</maintainer>
  <license>LGPL</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
