<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>static_pose_injector</name>
  <version>0.1.0</version>
  <description>Simple injector for projector camera intrinsics and extrinsics</description>
  <maintainer email="chris.brammer@extend3d.de">Chris Brammer</maintainer>
  <license>LGPL</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>python-lxml</exec_depend>
  <exec_depend>python_parameters</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-numpy-quaternion-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
