<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_tracker</name>
  <version>0.1.0</version>
  <description>Touch Tracker based on Robert Xiaos' DIRECT: Practical Touch Tracking on Surfaces with Hybrid Depth-Infrared Sensing</description>
  <maintainer email="chris.brammer@extend3d.de">Chris Brammer</maintainer>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv2</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>std_srvs</depend>
  <depend>touch_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
